# echarts-dashboard

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json  tsconfig.json
.github/workflows/: ci.yml
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/wasm/: Cargo.toml
crates/wasm/src/: lib.rs
docs/: fe-brief.md  spec.md
tools/: build.sh
web/: app.css  app.js  app.ts  body.html  echarts.d.ts  style.css  wasm.d.ts
