[package]
name = "dashboard-wasm"
version = "0.1.0"
edition = "2021"
description = "wasm-bindgen binding exposing dashboard-core to JavaScript (the browser-side aggregation engine)."

[lib]
crate-type = ["cdylib"]

[dependencies]
dashboard-core = { path = "../core" }
wasm-bindgen = "0.2"
js-sys = "0.3"
